--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         </div>
         <div class="buttons">
             <div class="navButton activePage" id="Home">Home</div>
-            <div class="navButton" id="Login">Login</div>
-            <div class="navButton" id="Register">Register
+            <div class="navButton" id="Login">Login
                 <div class="dropdown-content" id="dropdown">
-                    <div class="dropdown-option">As a User</div>
-                    <div class="dropdown-option">As a Shopkeeper</div>
+                    <div class="dropdown-option" id="goasUser">As a User</div>
+                    <div class="dropdown-option" id="goasShopkeeper">As a Shopkeeper</div>
                 </div>
             </div>
+            <div class="navButton" id="Register">Register</div>
         </div>
     </nav>
 
