--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="styles/ico.svg" type="image/svg+xml">
+    <link rel="icon" href="ico.svg" type="image/svg+xml">
     <title>Techno Pharms - Always to help.🔧</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -87,7 +87,7 @@
         </div>
         <div id="copy">&copy; Techno Pharms 2024-25.</div>
     </footer>
-    <script src="scripts/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
