--- a/register.html
+++ b/register.html
@@ -75,7 +75,7 @@
                     </div>
                 </div>
 
-                <button onclick="window.location.href = '../login.html';" id="goforms">Login</button>
+                <button onclick="window.location.href = window.location.origin + '/TechnoPharms/login.html';" id="goforms">Login</button>
 
 
             </div>
