--- a/login.html
+++ b/login.html
@@ -63,7 +63,7 @@
                     </div>
 
                 </div>
-                <button onclick="window.location.href = '../register.html';" id="goforms">Register</button>
+                <button onclick="window.location.href = window.location.origin + '/TechnoPharms/register.html';" id="goforms">Register</button>
             </div>
             
         </div>
