--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <button type="submit" id="giveSolution">Get My solution</button>
     </section>
 
-    <h1 id="Title1">How Techno Pharms Helps You</h1>
-
+    
     <section class="section3 fade-in">
+        <h1 id="Title1">How Techno Pharms Helps You</h1>
         <div class="boxContainer">
             <div class="box">
                 <div id="icon"><img src="src/idea.avif" alt="idea" srcset="" loading="lazy"></div>
@@ -88,6 +88,7 @@
         <div id="copy">&copy; Techno Pharms 2024-25.</div>
     </footer>
     <script src="scripts/script.js"></script>
+    <script src="scripts/solution.js"></script>
 </body>
 
 </html>
