--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p>Tell us whats wrong with your device, we'll help you fix it.</p>
         <textarea name="prob-states" id="prob-states"
             placeholder="Describe your device's issue in detail (e.g 'My laptop makes buzzing sound when i turn it on and then shutdown unexpectedly', 'My smartphone screen is cracked and unresponsive after fall.')."></textarea>
-        <button type="submit" id="giveSolution">Get My solution</button>
+        <button type="submit" onclick="sessionStorage.clear();" id="giveSolution">Get My solution</button>
     </section>
 
     
