--- a/solution.html
+++ b/solution.html
@@ -16,15 +16,16 @@
             <img src="src/logo2.avif" alt="" srcset="" id="imgLogo" loading="lazy">Techno Pharms
         </div>
         <div class="buttons">
-            <!-- <div class="navButton" id="Home">Home</div> -->
+            <div class="navButton" id="Home">Back</div>
             <div class="navButton activePage" id="solution">Solution</div>
-            <div class="navButton" id="Login">Login
+            <!-- <div class="navButton" id="Login">Login
                 <div class="dropdown-content" id="dropdown">
                     <div class="dropdown-option" id="goasUser">As a User</div>
                     <div class="dropdown-option" id="goasShopkeeper">As a Shopkeeper</div>
                 </div>
-            </div>
-            <div class="navButton" id="Register">Register</div>
+            </div> -->
+            <!-- <div class="navButton" id="Register">Register</div> -->
+            <div class="navButton" id="NearByShop">NearByShop</div>
         </div>
     </nav>
 
@@ -35,9 +36,6 @@
 
             <div id="videoContainer">
                 <div class="video-wrapper">
-                    <!-- <h2>YouTube Video Search</h2>
-                    <input type="text" id="searchInput" placeholder="Search for videos..." />
-                    <button onclick="searchVideos()">Search</button> -->
                     <div id="videoResults"></div>
                 </div>
             </div>
