--- a/solution.html
+++ b/solution.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="styles/ico.svg" type="image/svg+xml">
-    <title>Techno Pharms - Always to help.🔧</title>
+    <title>Solution ✨</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/solution.css">
 </head>
@@ -16,7 +16,7 @@
             <img src="src/logo2.avif" alt="" srcset="" id="imgLogo" loading="lazy">Techno Pharms
         </div>
         <div class="buttons">
-            <div class="navButton" id="Home">Back</div>
+            <div class="navButton" id="back">◀ Back</div>
             <div class="navButton activePage" id="solution">Solution</div>
             <!-- <div class="navButton" id="Login">Login
                 <div class="dropdown-content" id="dropdown">
@@ -55,7 +55,7 @@
         </div>
     </section>
 
-    <script src="scripts/script.js"></script>
+    <!-- <script src="scripts/script.js"></script> -->
     <script src="scripts/solution.js"></script>
 </body>
 
