--- a/nearbyshop.html
+++ b/nearbyshop.html
@@ -25,13 +25,12 @@
     </nav>
 
     <div class="sapLine"></div>
-    <marquee>This is the list of Tech Shops nearby you. Register for more nearest shops and booking appointments.
-    </marquee>
+    <marquee>Click On Your Nearest Shop Marker For More Details About Shop.</marquee>
     <div id="map"></div>
-    <div id="results">
-        <h3>Shops Found:</h3>
+    <!-- <div id="results">
+        <h3>Shops Nearest To You:</h3>
         <ul id="shopList"></ul>
-    </div>
+    </div> -->
 
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="scripts/script.js"></script>
