--- a/solution.html
+++ b/solution.html
@@ -16,16 +16,9 @@
             <img src="src/logo2.avif" alt="" srcset="" id="imgLogo" loading="lazy">Techno Pharms
         </div>
         <div class="buttons">
-            <div class="navButton" id="back">◀ Back</div>
-            <div class="navButton activePage" id="solution">Solution</div>
-            <!-- <div class="navButton" id="Login">Login
-                <div class="dropdown-content" id="dropdown">
-                    <div class="dropdown-option" id="goasUser">As a User</div>
-                    <div class="dropdown-option" id="goasShopkeeper">As a Shopkeeper</div>
-                </div>
-            </div> -->
-            <!-- <div class="navButton" id="Register">Register</div> -->
-            <div class="navButton" id="NearByShop">NearByShop</div>
+            <div class="navButton" onclick="window.location.href =  'index.html';">◀ Back</div>
+            <div class="navButton activePage" >Solution</div>
+            <div class="navButton" onclick="window.location.href = 'nearbyshop.html';">NearByShop</div>
         </div>
     </nav>
 
