--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="buttons">
             <div class="navButton activePage" id="Home">Home</div>
-            <div class="navButton" id="Login">Login
+            <div class="navButton" id="Login" onclick="loginShow(event);">Login
                 <div class="dropdown-content" id="dropdown">
                     <div class="dropdown-option" onclick="window.location.href = 'login.html?role=user';">As a User</div>
                     <div class="dropdown-option" onclick="window.location.href = 'login.html?role=shopkeeper';">As a Shopkeeper</div>
