--- a/nearbyshop.html
+++ b/nearbyshop.html
@@ -14,7 +14,7 @@
 <body>
     <nav>
         <div class="logo">
-            <img src="src/logo2.avif" alt="" srcset="" id="imgLogo" loading="lazy">Techno Pharms
+            <img src="src/logo2.avif" alt="" srcset="" id="imgLogo" loading="lazy"><span class="logo-text">Techno Pharms</span>
         </div>
         <div class="buttons">
             <div class="navButton" onclick="window.location.href =  'solution.html';">Solution</div>
