--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <div class="logo">
-            <img src="src/logo2.avif" alt="" srcset="" id="imgLogo" loading="lazy">Techno Pharms
+            <img src="src/logo2.avif" alt="" srcset="" id="imgLogo" loading="lazy"> <span class="logo-text">Techno Pharms</span>
         </div>
         <div class="buttons">
             <div class="navButton activePage" id="Home">Home</div>
