--- a/solution.html
+++ b/solution.html
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <div class="logo">
-            <img src="src/logo2.avif" alt="" srcset="" id="imgLogo" loading="lazy">Techno Pharms
+            <img src="src/logo2.avif" alt="" srcset="" id="imgLogo" loading="lazy"><span class="logo-text">Techno Pharms</span>
         </div>
         <div class="buttons">
             <div class="navButton" onclick="window.location.href =  'index.html';">◀ Back</div>
@@ -48,7 +48,7 @@
         </div>
     </section>
 
-    <!-- <script src="scripts/script.js"></script> -->
+    <script src="scripts/script.js"></script>
     <script src="scripts/solution.js"></script>
 </body>
 
