--- a/nearbyshop.html
+++ b/nearbyshop.html
@@ -26,6 +26,7 @@
 
     <div class="sapLine"></div>
     <marquee>Click On Your Nearest Shop Marker For More Details About Shop.</marquee>
+    <!-- <marquee>🚂🚃🚃🚃🚃🚃🚃🚃🚃🚃🚃🚃🚃</marquee> -->
     <div id="map"></div>
     
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
